--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Catalog</string>
-    <string name="title_category_list">Category List</string>
-    <string name="title_product_list">Product List</string>
+    <string name="title_category_list">Catalog</string>
+    <string name="title_product_list">Category</string>
     <string name="title_product_detail">Product Detail</string>
     <string name="item_content">Item Content</string>
     <string name="item_details">Item Details</string>
